--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,9 +16,12 @@
 <body>
 <div id="login-form">
   <div id="login-title">Log into Select Shop</div>
-  <button id="login-kakao-btn" onclick="location.href='https://kauth.kakao.com/oauth/authorize?client_id={REST_API_KEY}&redirect_uri=http://localhost:8080/api/user/kakao/callback&response_type=code'">
+
+  <button id="login-kakao-btn">
     카카오로 로그인하기
   </button>
+
+
   <button id="login-id-btn" onclick="location.href='/api/user/signup'">
     회원 가입하기
   </button>
@@ -34,7 +37,7 @@
   <div id="login-failed" style="display:none" class="alert alert-danger" role="alert">로그인에 실패하였습니다.</div>
 </div>
 </body>
-<script>
+<script th:inline="javascript">
   $(document).ready(function () {
     // 토큰 삭제
     Cookies.remove('Authorization', {path: '/'});
@@ -75,5 +78,13 @@
               window.location.href = host + '/api/user/login-page?error'
             });
   }
+
+  const clientId = /*[[${clientId}]]*/ 'default-client-id';
+  const redirectUri = /*[[${redirectUri}]]*/ 'default-redirect-uri';
+
+  document.getElementById('login-kakao-btn').addEventListener('click', function() {
+    const url = `https://kauth.kakao.com/oauth/authorize?client_id=${clientId}&redirect_uri=${redirectUri}&response_type=code`;
+    location.href = url;
+  });
 </script>
 </html>
